@@ -1,0 +1,6 @@
+% now this causes an assertion, because &testMinusOne returns an integer term (is this a bug?)
+#maxint=5.
+foo(3).
+bar(X) :- #int(X).
+minusone(X,V) :- &testMinusOne[X](V), foo(X), bar(V).
+foo(Z) :- #min{ V: minusone(X,V) } = Z.
