@@ -1,3 +1,11 @@
+2010-08-12  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* src/testsuite/dlvhex/TestPlugin.cpp: Added testcases for newly
+	discovered bugs (see also Trac issues #25 #25 #27).
+	* examples/rec_agg_bug1.hex: Likewise.
+	* examples/rec_agg_bug2.hex: Likewise.
+	* examples/rec_agg_bug3.hex: Likewise.
+
 2010-08-04  Peter Schueller  <ps@kr.tuwien.ac.at>
 
 	* m4/boost.m4: Temporary fix for iostreams configure check for
